--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -139,6 +139,13 @@ services:
       retries: 3
       timeout: 5s
 
+  mailpit:
+    container_name: ${APP_NAME}.mailpit
+    image: 'axllent/mailpit:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+
 networks:
   default:
     name: '${APP_NAME}.net'
