--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -48,9 +48,9 @@ services:
     depends_on:
       - mysql
 
-  mailhog:
-    container_name: ${APP_NAME}.mailhog
-    image: 'mailhog/mailhog:latest'
+  mailpit:
+    container_name: ${APP_NAME}.mailpit
+    image: 'axllent/mailpit:latest'
     ports:
       - '${FORWARD_MAILHOG_PORT:-1025}:1025'
       - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
