--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -1,5 +1,3 @@
-name: 'docker-base'
-
 services:
   devcontainer:
     container_name: ${APP_NAME}.devcontainer
@@ -47,25 +45,45 @@ services:
       - mysql
       - redis
 
-  node:
-    container_name: ${APP_NAME}.node
-    image: 'node:14.21.1'
-    user: node
-    working_dir: '/var/www/html'
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
+  # TODO serve different urls for process.browser and SSR before we can migrate to a containerized node version
+  # node:
+  #   container_name: ${APP_NAME}.node
+  #   image: 'node:14.21.1'
+  #   user: node
+  #   working_dir: '/var/www/html'
+  #   extra_hosts:
+  #     - 'host.docker.internal:host-gateway'
+  #   ports:
+  #     - '${FORWARD_NODE_PORT:-3000}:3000'
+  #     - '${FORWARD_VITE_PORT:-24678}:24678'
+  #   environment:
+  #     - NODE_ENV=${APP_ENV:-development}
+  #     - NUXT_HOST=node
+  #     - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
+  #   volumes:
+  #     - '/home/jordy/Development/bttr/${APP_NAME}/nuxt:/var/www/html'
+  #   command: 'npm run dev'
+  #   depends_on:
+  #     - php
+
+  mysql:
+    container_name: ${APP_NAME}.mysql
+    image: 'mysql/mysql-server:8.0'
     ports:
-      - '${FORWARD_NODE_PORT:-3000}:3000'
-      - '${FORWARD_VITE_PORT:-24678}:24678'
+      - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
-      - NODE_ENV=${APP_ENV:-development}
-      - NUXT_HOST=node
-      - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_HOST=%
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
-      - '/home/jordy/Development/bttr/${APP_NAME}/nuxt:/config/www'
-    command: 'npm run dev'
-    depends_on:
-      - php
+      - 'vol.mysql:/var/lib/mysql'
+      # - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
+      retries: 3
+      timeout: 5s
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -82,31 +100,6 @@ services:
       - ${PHPMYADMIN_PORT:-8888}:80
     depends_on:
       - mysql
-
-  mailhog:
-    container_name: ${APP_NAME}.mailhog
-    image: 'mailhog/mailhog:latest'
-    ports:
-      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
-
-  mysql:
-    container_name: ${APP_NAME}.mysql
-    image: 'mysql/mysql-server:8.0'
-    ports:
-      - '${FORWARD_DB_PORT:-3306}:3306'
-    environment:
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      - MYSQL_ROOT_HOST=%
-      - MYSQL_DATABASE=${DB_DATABASE}
-      - MYSQL_USER=${DB_USERNAME}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-    # volumes:
-    #   - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
-      retries: 3
-      timeout: 5s
 
   redis:
     container_name: ${APP_NAME}.redis
