--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -3,9 +3,7 @@ name: 'docker-base'
 services:
   php:
     container_name: ${APP_NAME}.php
-    build:
-      context: ../base/php/8.1
-      dockerfile: Dockerfile
+    image: ghcr.io/99linesofcode/php:8.1
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
@@ -21,7 +19,7 @@ services:
 
   node:
     container_name: ${APP_NAME}.node
-    image: 'node:18.14.0'
+    image: node:18.14.0
     user: node
     working_dir: '/var/www/html'
     extra_hosts:
@@ -38,7 +36,7 @@ services:
 
   mysql:
     container_name: ${APP_NAME}.mysql
-    image: 'mysql/mysql-server:8.0'
+    image: mysql/mysql-server:8.0
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
@@ -49,7 +47,7 @@ services:
       - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
       - 'vol.mysql:/var/lib/mysql'
-      # - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+      # - '$HOME:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
