--- a/bttr/php/Dockerfile
+++ b/bttr/php/Dockerfile
@@ -12,7 +12,7 @@ ARG PHP_VERSION="81"
 ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
 
 RUN \
-  echo "*** Install BTTR dependencies ***" && \
+  echo "*** Installing BTTR dependencies ***" && \
   apk add --no-cache --upgrade \
   mariadb-client \
   mariadb-connector-c \
@@ -28,3 +28,5 @@ RUN \
   php$PHP_VERSION-sodium \
   php$PHP_VERSION-xmlreader \
   php$PHP_VERSION-pecl-imagick
+
+COPY root/ /
