--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -15,9 +15,9 @@ ARG NEOVIM_VERSION="nightly"
 ENV TZ="Europe/Amsterdam"
 
 RUN \
-  ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ >> /etc/timezone \
-  && echo "*** Install base dependencies ***" \
+  echo "*** Install base dependencies ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
+  locales \
   gnupg \
   software-properties-common \
   ca-certificates \
@@ -32,8 +32,11 @@ RUN \
   fzf \
   ripgrep \
   zsh \
-  && echo "*** Set up container user ***" \
-  && useradd -u $PUID -U -d /config -s /bin/zsh -G users $USER \
+  && echo "*** Set locale and timezone ***" \
+  && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
+  && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ >> /etc/timezone \
+  && echo "*** Creating abc user ***" \
+  && useradd -u $PUID -U -d /config -s $(which zsh) -G users $USER \
   && echo "abc ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/$USER \
   && chmod 0440 /etc/sudoers.d/$USER \
   && mkdir -p /app /config/.local/bin /defaults \
