--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -21,6 +21,9 @@ services:
       - $HOME/Development/99linesofcode/${APP_NAME}:/config/www
 
   php:
+    build:
+      context: ./dev
+      dockerfile: Dockerfile
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
