--- a/ruby/.devcontainer.json
+++ b/ruby/.devcontainer.json
@@ -14,6 +14,9 @@
         "[ruby]": {
           "editor.defaultFormatter": "castwide.solargraph"
         },
+        "dotfiles.repository": "99linesofcode/dotfiles",
+        "dotfiles.targetPath": "/config/dotfiles",
+        "dotfiles.installCommand": "/config/dotfiles/install.sh",
         "eslint.validate": [
           "javascript",
           "typescript"
