--- a/devcontainer/php/docker-compose.yml
+++ b/devcontainer/php/docker-compose.yml
@@ -36,6 +36,19 @@ services:
     volumes:
       - vol.redis:/data
 
+  soketi:
+    container_name: ${APP_NAME}.soketi
+    image: quay.io/soketi/soketi:latest
+    environment:
+      - SOKETI_DEBUG=${SOKETI_DEBUG:-1}
+      - SOKETI_METRICS_SERVER_PORT=${SOKETI_METRICS_SERVER_PORT:-9601}
+      - SOKETI_DEFAULT_APP_ID=${PUSHER_APP_ID}
+      - SOKETI_DEFAULT_APP_KEY=${PUSHER_APP_KEY}
+      - SOKETI_DEFAULT_APP_SECRET=${PUSHER_APP_SECRET}
+    ports:
+      - ${PUSHER_FRONTEND_PORT:-6001}:6001
+      - ${PUSHER_METRICS_PORT:-9601}:9601
+
   meilisearch:
     container_name: ${APP_NAME}.meilisearch
     image: getmeili/meilisearch:latest
